--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "homepage": "https://github.com/nlf/wadofgum-nedb",
   "devDependencies": {
     "code": "^1.3.0",
-    "joi": "^5.1.0",
-    "lab": "^5.2.1",
-    "nedb": "^1.1.1",
-    "wadofgum": "^1.0.0-beta2"
+    "lab": "^5.2.1"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "peerDependencies": {
+    "joi": "^6.0.0",
+    "nedb": "^1.1.1",
+    "wadofgum": "^1.0.0-beta4"
+  }
 }
