--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wadofgum-nedb",
-  "version": "1.0.0-beta1",
+  "version": "1.0.0",
   "description": "an nedb plugin for wadofgum",
   "main": "index.js",
   "scripts": {
@@ -21,12 +21,15 @@
   "homepage": "https://github.com/nlf/wadofgum-nedb",
   "devDependencies": {
     "code": "^1.3.0",
-    "lab": "^5.2.1"
+    "lab": "^5.2.1",
+    "joi": "^6.0.0",
+    "nedb": "^1.1.1",
+    "wadofgum": "^1.0.0"
   },
   "dependencies": {},
   "peerDependencies": {
-    "joi": "^6.0.0",
-    "nedb": "^1.1.1",
-    "wadofgum": "^1.0.0-beta4"
+    "joi": ">= 6.0.0",
+    "nedb": "",
+    "wadofgum": ">= 1.0.0"
   }
 }
